--- a/source_react/src/App.css
+++ b/source_react/src/App.css
@@ -642,3 +642,117 @@ form button.remove:hover {
 	background-color: #FFF;
   background-image: linear-gradient(to right bottom, #FBDB89, #F48982);
 }
+
+.mynav{
+  border-bottom: 1px solid #dee2e6;
+  width: 75%;
+}
+
+.avatar{
+  width: 125px;
+  height: 125px;
+}
+
+.nav-tabs{
+  width: 100%;
+}
+
+/* .nav{
+  padding-left: 50px;
+  padding-right: 50px;
+} */
+
+.nav-item{
+  width: 50%;
+  text-align: center;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  padding-top: 30px;
+}
+.tab{
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
+  padding-top: 30px;
+  max-width: 100%;
+  width:60%;
+}
+
+.contentInfo{
+  width: 60%;
+  height: 30%;
+  display: flex;
+  align-self: center;
+  justify-content: flex-start;
+  justify-items: center;
+}
+
+.imgContent{
+  display: flex;
+  padding: 0 50px 0 50px;
+}
+
+.imgPost{
+  width: 49%;
+  padding-top: 10px;
+}
+
+.tab-pane{
+  display: flex;
+  flex-direction: column;
+}
+
+.imgPostContent{
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  color: #495057;
+  background-color: #fff;
+  border-color: #dee2e6 #dee2e6 #fff;
+}
+
+.nav-tabs .nav-link {
+  border: 1px solid transparent;
+  border-top-left-radius: .25rem;
+  border-top-right-radius: .25rem;
+}
+
+.nav-link {
+  display: block;
+  padding: .5rem 1rem;
+}
+
+.nav {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
+.nav-tabs {
+  border-bottom: 1px solid #dee2e6;
+}
+
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+  position: relative;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+/* .nav-link{
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-left: 50px;
+  padding-right: 50px;
+} */
